# Simple-cnn-node-for-barrel-colour-classification

./: CMakeLists.txt  package.xml
msg/: BoundingBox.msg  Object.msg  barrel.msg  barrels.msg  box2d.msg  box2ds.msg
scripts/: CactusNet.csv  Caucanet_node.py  CauctusNet.py  README.md  RandomDataSet.py  barrels.py  box.py  buildDataSet_CSV.py  compare.ipynb  compare.py  evaluate.py  image_set.csv  meanimage.npy  predict.csv  predict.py  preprocess.py  pro.py  pub.py  result.txt  testY.csv  train.py  trainY.csv  train_imge.py
scripts/history/: CactusNet_2.csv  predict.csv  testY.csv  trainY.csv
scripts/predict/: predict.csv
